# rust_graphics

./: Cargo.toml  build.rs
res/: cube.mtl
src/: lib.rs  main.rs  model.rs  resources.rs  texture.rs
src/shaders/: particles.wgsl  shader.wgsl
